Fix test for 1.2-SNAPSHOT